--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,98 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.loginContainer{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100vh;
 }
-
-.App-link {
-  color: #61dafb;
+.loginForm{
+  margin: auto;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: repeat(8,1fr);
+  justify-content: flex-start;
+  padding-left: 5px;
+  text-align: left;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.userInput{
+  border: 3px solid rgb(65, 65, 65);
+}
+input.ant-checkbox-input{
+  border: 3px solid rgb(65, 65, 65)!important;
+}
+.newUserText{
+  font-weight: 600;
+}
+.createaccText{
+  color: blue;
+}
+.signInOptionsText{
+  margin: 5px 10px;
+  text-align: center;
+}
+.signInText{
+  font-size: larger;
+  font-weight: 600;
+}
+.signinWidth{
+  width: 200px;
+}
+.signinbutton{
+  background-color: rgb(65, 65, 65);
+  color: rgb(247, 247, 247);
+}
+.homeHeader{
+  padding: 10px;
+  width: 100%;
+  border-bottom: 1px solid rgb(65, 65, 65);
+}
+.homeHeaderLeft{
+  font-size: larger;
+  font-weight: 600;
+  text-align: left;
+}
+.countryboxContainer{
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 5px;
+  justify-content: space-around;
+  margin: 5px;
+}
+.countrybox{
+  padding: 5px;
+  display: grid;
+  grid-template-columns: 80px auto;
+  justify-content: flex-start;
+  align-items: center;
+  border: 3px solid rgb(65, 65, 65);
+}
+.countryboxFlag{
+  border: 1px solid rgb(216, 216, 216);
+  width: 80px;
+  height: auto;
+  grid-column: 1/3;
+  grid-row: 1/3;
+  box-sizing: border-box;
+}
+.countryboxName{
+  text-align: left;
+  margin-left: 5px;
+  grid-column: 2/3;
+  grid-row: 1/2;
+  font-size: larger;
+  font-weight: 600;
+}
+.countryboxRegion{
+  text-align: left;
+  margin-left: 5px;
+  grid-column: 2/3;
+  grid-row: 2/3;
+  opacity: 0.9;
+}
+@media screen and (min-width: 768px) {
+  .countryboxContainer{
+    grid-template-columns: repeat(auto-fit, 440px);
   }
 }
