--- a/src/App.css
+++ b/src/App.css
@@ -43,9 +43,20 @@ input.ant-checkbox-input{
   background-color: rgb(65, 65, 65);
   color: rgb(247, 247, 247);
 }
-.homeHeader{
-  padding: 10px;
+.homeContainer{
+  position: relative;
+}
+.searchContainer{
   width: 100%;
+  position: sticky;
+  top: 0;
+  background-color: #fff;
+  z-index: 999;
+}
+.homeHeader{
+  padding: 0 10px;
+  width: 100%;
+  height: 50px;
   border-bottom: 1px solid rgb(65, 65, 65);
 }
 .homeHeaderLeft{
@@ -54,6 +65,7 @@ input.ant-checkbox-input{
   text-align: left;
 }
 .countryboxContainer{
+  position: relative;
   display: grid;
   grid-template-columns: 1fr;
   gap: 5px;
